--- a/python.html
+++ b/python.html
@@ -137,37 +137,109 @@
                 </li>
             </ul>
         </div>
-            <h1 class="text-3xl text-warning">จุดเด่นและจุดด้อยของภาษา Python</h1>
-            <div class="m-4">
-                <p class="text-xl">จุดเด่นคร่าวๆ ของ Python</p>
-                <ul class="list-disc pl-5 mt-2">
-                    <li class="mb-2">ไวยากรณ์ (Syntax) ของภาษานั้นอ่านและทำความเข้าใจได้ง่าย มีความตรงไปตรงมา
-                        คล้ายคลึงกันกับภาษาอังกฤษเลยก็ว่าได้</li>
-                    <li class="mb-2">สามารถนำไปประยุกต์ใช้งานได้หลากหลายด้าน ไม่ว่าจะเป็น Web Development, Data Science,
-                        AI & Machine Learning, GUI, Automation, Network Systems, Games, Web Scraping, etc</li>
-                    <li class="mb-2">Python เป็น open source ซอฟต์แวร์ เราสามารถโหลดใช้งานได้ฟรีไม่ต้องมีค่า license
-                        ต่าง ๆ</li>
-                </ul>
-                <p class="text-xl">จุดด้อย ของ Python</p>
-                <ul class="list-disc pl-5 mt-2">
-                    <li class="mb-2">ในด้านความเร็ว ถือว่าเป็นภาษาที่มีความเร็วในการประมวลผลช้ากว่าภาษาแนว Compiled
-                        Languages อย่างเช่น C, C++ เป็นต้น เพราะว่า Python นั้นจัดการหน่วยความจำให้เราอัตโนมัติ
-                        สังเกตง่าย ๆ ตอนกำหนดตัวแปรเราก็ไม่ต้องกำหนด Type ของตัวแปรเลย </li>
-                    <li class="mb-2">ไม่ใช่ภาษา Native สำหรับพัฒนา Mobile App
-                        นี่เป็นหนึ่งในไม่กี่ด้านที่ภาษาไพธอนทำได้ไม่เต็มที่ครับ ( ถึงแม้จะไลบรารีสำหรับทำด้านนี้อยู่บ้าง
-                        แต่ก็ไม่นิยม) โดยถ้าเป็นด้านพัฒนาแอพมือถือ ที่แนะนำก็จะเป็นภาษาหรือเครื่องมือจำพวก Flutter,
-                        React Native, Kotlin, Swift เป็นต้น แต่วงเล็บเอาไว้ว่าเราสามารถใช้ Python ทำเป็น API
-                        ฝั่งหลังบ้านของ Mobile App</li>
-                </ul>
-            </div>
-            <h1 class="text-3xl text-warning">What’s New In Python 3.12</h1>
-            <p class="text-base">This article explains the new features in Python 3.12, compared to 3.11. Python 3.12 was released on October 2, 2023</p>
-            <p class="text-base">New syntax features: <a href="https://docs.python.org/3/whatsnew/3.12.html?fbclid=IwAR1MPcPDIG72Kj3T5YYB4lrkhMA8P4F28r1rSGvgUbohavGKmWvYqAAMnQk#whatsnew312-pep695">PEP 695</a>, type parameter syntax and the type statement</p>
-            </div>
-            <div class="flex flex-row justify-center items-center m-10">
-                <img src="asset/python-2.jpg" class="pic rounded-lg m-5" alt="" width="500" height="500">
-                <img src="asset/py.webp" class="pic rounded-lg" alt="" width="500" height="350">
-            </div>
+        <h1 class="text-3xl text-warning">จุดเด่นและจุดด้อยของภาษา Python</h1>
+        <div class="m-4">
+            <p class="text-xl">จุดเด่นคร่าวๆ ของ Python</p>
+            <ul class="list-disc pl-5 mt-2">
+                <li class="mb-2">ไวยากรณ์ (Syntax) ของภาษานั้นอ่านและทำความเข้าใจได้ง่าย มีความตรงไปตรงมา
+                    คล้ายคลึงกันกับภาษาอังกฤษเลยก็ว่าได้</li>
+                <li class="mb-2">สามารถนำไปประยุกต์ใช้งานได้หลากหลายด้าน ไม่ว่าจะเป็น Web Development, Data Science,
+                    AI & Machine Learning, GUI, Automation, Network Systems, Games, Web Scraping, etc</li>
+                <li class="mb-2">Python เป็น open source ซอฟต์แวร์ เราสามารถโหลดใช้งานได้ฟรีไม่ต้องมีค่า license
+                    ต่าง ๆ</li>
+            </ul>
+            <p class="text-xl">จุดด้อย ของ Python</p>
+            <ul class="list-disc pl-5 mt-2">
+                <li class="mb-2">ในด้านความเร็ว ถือว่าเป็นภาษาที่มีความเร็วในการประมวลผลช้ากว่าภาษาแนว Compiled
+                    Languages อย่างเช่น C, C++ เป็นต้น เพราะว่า Python นั้นจัดการหน่วยความจำให้เราอัตโนมัติ
+                    สังเกตง่าย ๆ ตอนกำหนดตัวแปรเราก็ไม่ต้องกำหนด Type ของตัวแปรเลย </li>
+                <li class="mb-2">ไม่ใช่ภาษา Native สำหรับพัฒนา Mobile App
+                    นี่เป็นหนึ่งในไม่กี่ด้านที่ภาษาไพธอนทำได้ไม่เต็มที่ครับ ( ถึงแม้จะไลบรารีสำหรับทำด้านนี้อยู่บ้าง
+                    แต่ก็ไม่นิยม) โดยถ้าเป็นด้านพัฒนาแอพมือถือ ที่แนะนำก็จะเป็นภาษาหรือเครื่องมือจำพวก Flutter,
+                    React Native, Kotlin, Swift เป็นต้น แต่วงเล็บเอาไว้ว่าเราสามารถใช้ Python ทำเป็น API
+                    ฝั่งหลังบ้านของ Mobile App</li>
+            </ul>
+        </div>
+        <h1 class="text-3xl text-warning">What’s New In Python 3.12</h1>
+        <p class="text-base">This article explains the new features in Python 3.12, compared to 3.11. Python 3.12 was
+            released on October 2, 2023</p>
+        <p class="text-base">New syntax features: <a
+                href="https://docs.python.org/3/whatsnew/3.12.html?fbclid=IwAR1MPcPDIG72Kj3T5YYB4lrkhMA8P4F28r1rSGvgUbohavGKmWvYqAAMnQk#whatsnew312-pep695">PEP
+                695</a>, type parameter syntax and the type statement</p>
+    </div>
+    <div class="flex flex-row justify-center items-center m-10">
+        <img src="asset/python-2.jpg" class="pic rounded-lg m-5" alt="" width="500" height="500">
+        <img src="asset/py.webp" class="pic rounded-lg" alt="" width="500" height="350">
+        
+    </div>
+    <h1 class="text-3xl text-warning ml-5">History Of Python</h1>
+    <div class="flex flex-col justify-center items-center mt-10">
+        <ul class="timeline test_1">
+            <li>
+                <div class="timeline-start">Jan 1994</div>
+                <div class="timeline-middle">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
+                        <path fill-rule="evenodd"
+                            d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z"
+                            clip-rule="evenodd" />
+                    </svg>
+                </div>
+                <div class="timeline-end timeline-box">Python 1.0</div>
+                <hr />
+            </li>
+            <li>
+                <hr />
+                <div class="timeline-start">Oct 2000</div>
+                <div class="timeline-middle">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
+                        <path fill-rule="evenodd"
+                            d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z"
+                            clip-rule="evenodd" />
+                    </svg>
+                </div>
+                <div class="timeline-end timeline-box">Python 2.0</div>
+                <hr />
+            </li>
+            <li>
+                <hr />
+                <div class="timeline-start">Dec 2008</div>
+                <div class="timeline-middle">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
+                        <path fill-rule="evenodd"
+                            d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z"
+                            clip-rule="evenodd" />
+                    </svg>
+                </div>
+                <div class="timeline-end timeline-box">Python 3.0</div>
+                <hr />
+            </li>
+            <li>
+                <hr />
+                <div class="timeline-start">June 2018</div>
+                <div class="timeline-middle">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
+                        <path fill-rule="evenodd"
+                            d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z"
+                            clip-rule="evenodd" />
+                    </svg>
+                </div>
+                <div class="timeline-end timeline-box">Python 3.7</div>
+                <hr />
+            </li>
+            <li>
+                <hr />
+                <div class="timeline-start">Oct 2023</div>
+                <div class="timeline-middle">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
+                        <path fill-rule="evenodd"
+                            d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z"
+                            clip-rule="evenodd" />
+                    </svg>
+                </div>
+                <div class="timeline-end timeline-box">Python 3.12</div>
+            </li>
+        </ul>
+    </div>
     </div>
     <footer class="footer items-center p-4 bg-neutral text-neutral-content">
         <aside class="items-center grid-flow-col">
