--- a/python.html
+++ b/python.html
@@ -174,7 +174,7 @@
     </div>
     <h1 class="text-3xl text-warning ml-5">History Of Python</h1>
     <div class="flex flex-col justify-center items-center mt-10">
-        <ul class="timeline test_1">
+        <ul class="timeline test_1 mb-5">
             <li>
                 <div class="timeline-start">Jan 1994</div>
                 <div class="timeline-middle">
