--- a/python.html
+++ b/python.html
@@ -38,6 +38,12 @@
     <nav class="navbar bg-primary text-base-content sticky top-0 z-30 shadow-md">
         <div class="flex-1">
             <a href="index.html" class="btn btn-ghost text-xl">Project</a>
+            <a href="svelte.html" class="btn btn-ghost text-xl">Svelte</a>
+            <a href="tailwind.html" class="btn btn-ghost text-xl">Tailwind</a>
+            <a href="#" class="btn btn-ghost text-xl">Python</a>
+            <a href="javascript.html" class="btn btn-ghost text-xl">JavaScript</a>
+            <a href="postgreSQL.html" class="btn btn-ghost text-xl">PostgreSQL</a>
+            <a href="mongoDB.html" class="btn btn-ghost text-xl">MongoDB</a>
         </div>
         <div class="flex-none mx-5">
             <button type="button" class="btn btn-square btn-ghost" onclick="toggleMenu()">
