--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-    <nav class="navbar bg-primary text-base-content sticky top-0 z-30 shadow-md headline">
+    <nav class="navbar bg-primary text-xs-content sticky top-0 z-30 shadow-md headline">
         <div class="flex-1">
             <a href="#" class="btn btn-ghost text-xl">Project</a>
             <a href="svelte.html" class="btn btn-ghost text-xl">Svelte</a>
