--- a/javascript.html
+++ b/javascript.html
@@ -57,7 +57,7 @@
 </head>
 
 <body>
-    <nav class="navbar bg-primary text-base-content sticky top-0 z-30 shadow-md">
+    <nav class="navbar bg-primary text-xs-content sticky top-0 z-30 shadow-md">
         <div class="flex-1">
             <a href="index.html" class="btn btn-ghost text-xl">Project</a>
             <a href="svelte.html" class="btn btn-ghost text-xl">Svelte</a>
