--- a/index.html
+++ b/index.html
@@ -27,32 +27,27 @@
 
 <body>
     <nav class="navbar bg-primary text-base-content sticky top-0 z-30 shadow-md headline">
-    <div class="flex items-center">
-        <a href="#" class="btn btn-ghost text-lg md:text-xl">Project</a>
-        <a href="svelte.html" class="btn btn-ghost text-lg md:text-xl">Svelte</a>
-        <a href="tailwind.html" class="btn btn-ghost text-lg md:text-xl">Tailwind</a>
-        <a href="python.html" class="btn btn-ghost text-lg md:text-xl">Python</a>
-        <a href="javascript.html" class="btn btn-ghost text-lg md:text-xl">JavaScript</a>
-        <a href="postgreSQL.html" class="btn btn-ghost text-lg md:text-xl">PostgreSQL</a>
-        <a href="mongoDB.html" class="btn btn-ghost text-lg md:text-xl">MongoDB</a>
+    <div class="flex-1">
+        <a href="#" class="btn btn-ghost text-lg sm:text-xl md:text-xl lg:text-xl xl:text-xl">Project</a>
+        <a href="svelte.html" class="btn btn-ghost text-lg sm:text-xl md:text-xl lg:text-xl xl:text-xl">Svelte</a>
+        <a href="tailwind.html" class="btn btn-ghost text-lg sm:text-xl md:text-xl lg:text-xl xl:text-xl">Tailwind</a>
+        <a href="python.html" class="btn btn-ghost text-lg sm:text-xl md:text-xl lg:text-xl xl:text-xl">Python</a>
+        <a href="javascript.html" class="btn btn-ghost text-lg sm:text-xl md:text-xl lg:text-xl xl:text-xl">JavaScript</a>
+        <a href="postgreSQL.html" class="btn btn-ghost text-lg sm:text-xl md:text-xl lg:text-xl xl:text-xl">PostgreSQL</a>
+        <a href="mongoDB.html" class="btn btn-ghost text-lg sm:text-xl md:text-xl lg:text-xl xl:text-xl">MongoDB</a>
     </div>
-    <div class="flex-none ml-auto">
-        <button type="button" class="btn btn-square btn-ghost" @click="toggleMenu()">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                class="inline-block w-5 h-5 stroke-current">
+    <div class="flex-none mx-5">
+        <button type="button" class="btn btn-square btn-ghost" onclick="toggleMenu()">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block w-5 h-5 stroke-current ">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                     d="M5 12h.01M12 12h.01M19 12h.01M6 12a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0z">
                 </path>
             </svg>
+            <ul id="menu" class="menu bg-primary w-56 rounded-box hidden z-50 mr-30 text-lg sm:text-xl md:text-xl lg:text-xl xl:text-xl">
+                <li><a href="https://docs.google.com/document/d/1LKTyX99kwTNi3A11jp4rdCVAT1pB1_dMoakKRmE1chY/edit?usp=sharing" target="_blank">ดูเอกสาร</a></li>
+                <li><a href=" References.html">References</a></li>
+            </ul>
         </button>
-    </div>
-
-    <!-- Daisy UI Menu -->
-    <div x-show="menuVisible" @click.away="menuVisible = false">
-        <d-menu v-show="menuVisible" @click.away="menuVisible = false" class="menu bg-primary w-56 rounded-box z-50 mt-2">
-            <li><a href="https://docs.google.com/document/d/1LKTyX99kwTNi3A11jp4rdCVAT1pB1_dMoakKRmE1chY/edit?usp=sharing" target="_blank" class="menu-title text-lg md:text-xl">ดูเอกสาร</a></li>
-            <li><a href="References.html" class="menu-title text-lg md:text-xl">References</a></li>
-        </d-menu>
     </div>
 </nav>
 
