--- a/index.html
+++ b/index.html
@@ -28,7 +28,13 @@
 <body>
     <nav class="navbar bg-primary text-base-content sticky top-0 z-30 shadow-md headline">
     <div class="flex-1">
-        <a href="#" class="btn btn-ghost text-lg sm:text-xl md:text-xl lg:text-xl xl:text-xl">Project</a>
+        <a href="#" class="btn btn-ghost text-lg sm:text-xl md:text-xl lg:text-xl xl:text-xl">Project</a>  
+        <a href="svelte.html" class="btn btn-ghost text-lg sm:text-xl md:text-xl lg:text-xl xl:text-xl">Svelte</a>
+        <a href="tailwind.html" class="btn btn-ghost text-lg sm:text-xl md:text-xl lg:text-xl xl:text-xl">Tailwind</a>
+        <a href="python.html" class="btn btn-ghost text-lg sm:text-xl md:text-xl lg:text-xl xl:text-xl">Python</a>
+        <a href="javascript.html" class="btn btn-ghost text-lg sm:text-xl md:text-xl lg:text-xl xl:text-xl">JavaScript</a>
+        <a href="postgreSQL.html" class="btn btn-ghost text-lg sm:text-xl md:text-xl lg:text-xl xl:text-xl">PostgreSQL</a>
+        <a href="mongoDB.html" class="btn btn-ghost text-lg sm:text-xl md:text-xl lg:text-xl xl:text-xl">MongoDB</a>
     </div>
     <div class="flex-none mx-5">
         <button type="button" class="btn btn-square btn-ghost" onclick="toggleMenu()">
