--- a/postgreSQL.html
+++ b/postgreSQL.html
@@ -56,32 +56,63 @@
 </head>
 
 <body>
-    <nav class="navbar bg-primary text-base-content sticky top-0 z-30 shadow-md">
-        <div class="flex-1">
-            <a href="index.html" class="btn btn-ghost text-xl">Project</a>
-            <a href="svelte.html" class="btn btn-ghost text-xl">Svelte</a>
-            <a href="tailwind.html" class="btn btn-ghost text-xl">Tailwind</a>
-            <a href="python.html" class="btn btn-ghost text-xl">Python</a>
-            <a href="javascript.html" class="btn btn-ghost text-xl">JavaScript</a>
-            <a href="#" class="btn btn-ghost text-xl">PostgreSQL</a>
-            <a href="mongoDB.html" class="btn btn-ghost text-xl">MongoDB</a>
+    <nav class="navbar bg-primary text-base-content sticky top-0 z-30 shadow-md headline">
+        <div class="navbar-start">
+            <div class="dropdown">
+                <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                        stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M4 6h16M4 12h8m-8 6h16" />
+                    </svg>
+                </div>
+            </div>
+            <a class="btn btn-ghost text-xl" href="index.html">Project</a>
         </div>
-        <div class="flex-none mx-5">
-            <button type="button" class="btn btn-square btn-ghost" onclick="toggleMenu()">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                    class="inline-block w-5 h-5 stroke-current">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                        d="M5 12h.01M12 12h.01M19 12h.01M6 12a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0z">
-                    </path>
+        <div class="navbar-center hidden lg:flex">
+            <ul class="menu menu-horizontal px-1">
+                <li><a
+                        href="https://docs.google.com/document/d/1LKTyX99kwTNi3A11jp4rdCVAT1pB1_dMoakKRmE1chY/edit?usp=sharing">Document</a>
+                </li>
+                <li><a href="References.html">References</a></li>
+                <li>
+                    <details>
+                        <summary>Technologies</summary>
+                        <ul class="p-2">
+                            <li><a href="svelte.html">Svelte</a></li>
+                            <li><a href="tailwind.html">Tailwind</a></li>
+                            <li><a href="python.html">Python</a></li>
+                            <li><a href="javascript.html">JavaScript</a></li>
+                            <li><a >PostgreSQL</a></li>
+                            <li><a href="mongoDB.html">MongoDB</a></li>
+                        </ul>
+                    </details>
+                </li>
+            </ul>
+        </div>
+        <div class="navbar-end">
+            <label class="swap swap-rotate">
+
+                <!-- this hidden checkbox controls the state -->
+                <input type="checkbox" id="themeSwitch" onchange="toggleTheme()" />
+
+
+                <!-- sun icon -->
+                <svg class="swap-on fill-current w-5 h-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <path
+                        d="M5.64,17l-.71.71a1,1,0,0,0,0,1.41,1,1,0,0,0,1.41,0l.71-.71A1,1,0,0,0,5.64,17ZM5,12a1,1,0,0,0-1-1H3a1,1,0,0,0,0,2H4A1,1,0,0,0,5,12Zm7-7a1,1,0,0,0,1-1V3a1,1,0,0,0-2,0V4A1,1,0,0,0,12,5ZM5.64,7.05a1,1,0,0,0,.7.29,1,1,0,0,0,.71-.29,1,1,0,0,0,0-1.41l-.71-.71A1,1,0,0,0,4.93,6.34Zm12,.29a1,1,0,0,0,.7-.29l.71-.71a1,1,0,1,0-1.41-1.41L17,5.64a1,1,0,0,0,0,1.41A1,1,0,0,0,17.66,7.34ZM21,11H20a1,1,0,0,0,0,2h1a1,1,0,0,0,0-2Zm-9,8a1,1,0,0,0-1,1v1a1,1,0,0,0,2,0V20A1,1,0,0,0,12,19ZM18.36,17A1,1,0,0,0,17,18.36l.71.71a1,1,0,0,0,1.41,0,1,1,0,0,0,0-1.41ZM12,6.5A5.5,5.5,0,1,0,17.5,12,5.51,5.51,0,0,0,12,6.5Zm0,9A3.5,3.5,0,1,1,15.5,12,3.5,3.5,0,0,1,12,15.5Z" />
                 </svg>
-                <ul id="menu" class="menu bg-primary w-56 rounded-box hidden z-50 mr-10 text-xl">
-                    <li><a href="https://docs.google.com/document/d/1LKTyX99kwTNi3A11jp4rdCVAT1pB1_dMoakKRmE1chY/edit?usp=sharing"
-                            target="_blank" ">ดูเอกสาร</a></li>
-                    <li><a href=" References.html">References</a></li>
-                </ul>
-            </button>
+
+                <!-- moon icon -->
+                <svg class="swap-off fill-current w-5 h-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <path
+                        d="M21.64,13a1,1,0,0,0-1.05-.14,8.05,8.05,0,0,1-3.37.73A8.15,8.15,0,0,1,9.08,5.49a8.59,8.59,0,0,1,.25-2A1,1,0,0,0,8,2.36,10.14,10.14,0,1,0,22,14.05,1,1,0,0,0,21.64,13Zm-9.5,6.69A8.14,8.14,0,0,1,7.08,5.22v.27A10.15,10.15,0,0,0,17.22,15.63a9.79,9.79,0,0,0,2.1-.22A8.11,8.11,0,0,1,12.14,19.73Z" />
+                </svg>
+
+            </label>
         </div>
     </nav>
+
     <div class="flex flex-col justify-center items-center mt-10">
         <img src="asset/Postgre.png" class="pic rounded-lg" alt="" width="750" height="750">
     </div>
@@ -241,10 +272,17 @@
         </nav>
     </footer>
     <script>
-        function toggleMenu() {
-            let menu = document.getElementById("menu");
-            menu.classList.toggle("hidden");
+        function toggleTheme() {
+            const htmlElement = document.querySelector('html');
+            const themeSwitch = document.getElementById('themeSwitch');
+
+            if (themeSwitch.checked) {
+                htmlElement.setAttribute('data-theme', 'fantasy');
+            } else {
+                htmlElement.setAttribute('data-theme', 'business');
+            }
         }
+
         function animation() {
             ScrollReveal().reveal('.headline', { delay: 250 });
             ScrollReveal().reveal('.test_1', { delay: 250 });
