--- a/Php.html
+++ b/Php.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tailwind</title>
+    <title>PHP</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
@@ -58,13 +58,13 @@
                         <summary>Technologies</summary>
                         <ul class="p-2">
                             <li><a href="svelte.html">Svelte</a></li>
-                            <li><a href="#">Tailwind</a></li>
+                            <li><a href="tailwind.html">Tailwind</a></li>
                             <li><a href="python.html">Python</a></li>
                             <li><a href="javascript.html">JavaScript</a></li>
                             <li><a href="postgreSQL.html">PostgreSQL</a></li>
                             <li><a href="mongoDB.html">MongoDB</a></li>
                             <li><a href="Scala.html">Scala</a></li>
-                            <li><a href="Php.html">php</a></li>
+                            <li><a href="#">php</a></li>
                             <li><a href="Angular.html">Angular</a></li>
                         </ul>
                     </details>
@@ -95,66 +95,34 @@
     </nav>
 
     <div class="flex flex-col justify-center items-center mt-10">
-        <img src="asset/tailwind 2.png" class="pic rounded-lg" alt="" width="1000" height="1000">
+        <img src="asset/php.png" class="pic rounded-lg" alt="" width="750" height="750">
     </div>
     <div class="m-7">
-        <h1 class="text-3xl text-info">CSS คืออะไร ?</h1>
+        <h1 class="text-3xl text-info">PHP คืออะไร ?</h1>
         <div class="m-4">
-            <p class="text-xl">CSS (Castcading Style Sheet) คือ ภาษาที่ใช้ในการตกแต่งหน้าเว็บของเราให้มีสีสัน สวยงามขึ้น
+            <p class="text-xl">PHP (ตัวย่อแบบเรียกซ้ําสําหรับ PHP: Hypertext Preprocessor)
+                เป็นภาษาสคริปต์เอนกประสงค์แบบโอเพ่นซอร์สที่ใช้กันอย่างแพร่หลายซึ่งเหมาะอย่างยิ่งสําหรับการพัฒนาเว็บและสามารถฝังลงใน
+                HTML
             </p>
         </div>
-        <h1 class="text-3xl text-info">CSS Framework คืออะไร ?</h1>
+        <h1 class="text-3xl text-info">PHP ทําอะไรได้บ้าง?</h1>
         <div class="m-4">
-            <p class="text-xl">CSS Framework คือ ชุดคำสั่ง CSS ที่ถูกเขียนไว้ล่วงหน้าแล้ว เราสามารถเรียกใช้งานได้เลย
-                ตัวอย่าง
-                CSS Framework ที่ได้รับความนิยม เช่น Bootstrap, Tailwind, Semantic UI เป็นต้น
-            </p>
-        </div>
-        <h1 class="text-3xl text-info">Tailwind CSS ทำอะไรได้บ้าง ?</h1>
-        <div class="m-4">
-            <p class="text-xl">คราวนี้ลองมาดูประโยชน์ของการใช้งาน Tailwind CSS กันบ้าง ซึ่งข้อดีของ TailwindCSS มีดังนี
-            </p>
-
+            <p class="text-xl">มีสามส่วนหลักที่ใช้ PHP </p>
             <ul class="list-disc pl-5 mt-2">
-                <li class="mb-2"> Tailwind CSS จะ Build CSS ออกมาเท่าที่ใช้งานเพราะเราจะทำการ render style.css ออกมา
-                    ไม่ได้เอาไฟล์ CSS ทั้งหมดมาใช้ </li>
-                <li class="mb-2"> สามารถเลือก Modules เข้ามาใช้งานได้ ไม่จำเป็นต้องเลือกทุก Modules </li>
-                <li class="mb-2"> สามารถปรับแต่ง Theme ของเราได้ตามอัธยาศัย </li>
-                <li class="mb-2"> สามารถจัดการกับ display ใหม่ๆอย่าง flex และ grid ได้ง่ายขึ้น </li>
-                <li class="mb-2"> สามารถสร้าง components ขึ้นมาใช้งานได้เลยเหมาะกับ Modern framework อย่าง React,
-                    Angular และ VueJS </li>
-                <li class="mb-2"> สามารถ Custom breakpoint สำหรับการทำ Responsive Web ได้ </li>
-                <li class="mb-2"> สามารถสร้าง dark mode ขึ้นมาให้ user เลือกสลับ mode ไปมาได้ </li>
+                <li class="mb-2">Server-side scripting.</li>
+                <li class="mb-2">Command line scripting.</li>
+                <li class="mb-2">Writing desktop applications.</li>
             </ul>
-
-            <p>จะเห็นว่า Tailwind CSS นั้นมีความสามารถที่ช่วยแก้ปัญหาของ CSS Framework รู่นก่อนหน้า
-                และยังเหมาะกับการทำงานกับ Front-end Framework ยุคใหม่อย่าง React, Angular และ VueJS
-            </p>
         </div>
-        <h1 class="text-3xl text-info">Tailwind CSS ทำงานยังไง</h1>
+        <h1 class="text-3xl text-info">Example</h1>
         <div class="m-4">
-            <div class="flex flex-col justify-center items-center m-10">
-                <img src="asset/how_tailwind_work.png" class="pic rounded-lg" alt="" width="500" height="500">
-            </div>
-            <p class="text-xl">หลักการทำงานของ Tailwind CSS คือ จะมี scanner เข้าไปค้นหา TailwindCSS class ใน html,
-                Javascript หรือ file อื่นๆที่เรากำหนดไว้ใน tailwind.config.js หลังจากนั้น render output ออกมาเป็น
-                CSS(styles.css) และถ้าเราต้องการ custom stylesheet หรือสร้าง components ขึ้นมาใหม่เราจะเข้าไปเขียนใน
-                style.src.css
-            </p>
+            <pre class="bg-warning-content text-info rounded-lg mt-3 test_1 mb-3 relative"
+                style="width: auto; height: 200px; overflow: auto;">
+                    <p class="text-base ml-3">&lt;!DOCTYPE html&gt;</p><p class="text-base ml-3">&lt;html&gt;</p><p class="text-base ml-3">     &lt;head&gt;</p><p class="text-base ml-3">          &lt;tiltle&gt;Example&lt;/tiltle&gt;</p><p class="text-base ml-3">     &lt;/head&gt;</p><p class="text-base ml-3"></p><p class="text-base ml-3">     &lt;body&gt;</p><p class="text-base ml-3"></p><p class="text-base ml-3">          &lt;?php</p><p class="text-base ml-3">                 echo "Hi, I'm a PHP script!";</p><p class="text-base ml-3">          ?&gt;</p><p class="text-base ml-3">     &lt;/body&gt;</p><p class="text-base ml-3">&lt;/html&gt;</p>
+                <button class="copy-button_1 btn rounded-lg absolute top-0 right-0 m-3" onclick="copyToClipboard_1()">Copy</button>
+            </pre>
         </div>
-        <h1 class="text-3xl text-info">Get started with Tailwind CSS</h1>
-        <div class="m-4">
-            <p class="text-xl">Tailwind CSS works by scanning all of your HTML files, JavaScript components, and any
-                other templates for class names, generating the corresponding styles and then writing them to a static
-                CSS file.
-
-                It's fast, flexible, and reliable — with zero-runtime.
-            </p>
-            <div class="flex flex-col justify-center items-center mt-10">
-               <iframe src="https://play.tailwindcss.com/biizQXffiJ" width="100%" height="600" frameborder="0"></iframe>
-            </div>
-        </div>
-      
+    </div>
     </div>
 
     <footer class="footer items-center p-4 bg-neutral text-neutral-content">
@@ -191,13 +159,36 @@
         function animation() {
             ScrollReveal().reveal('.headline', { delay: 850 });
             ScrollReveal().reveal('.test_1', { delay: 250 });
+            ScrollReveal().reveal('.test_2', { delay: 250 });
             gsap.from(".pic", {
                 opacity: 0,
                 y: 100,
                 duration: 2
             });
-            
         }
+
+        function copyToClipboard_1() {
+            const codeBlock = document.querySelector('.test_1');
+            const codeText = codeBlock.innerText;
+
+            const textarea = document.createElement('textarea');
+            textarea.value = codeText;
+            document.body.appendChild(textarea);
+            textarea.select();
+            document.execCommand('copy');
+            document.body.removeChild(textarea);
+
+            const copyButton = document.querySelector('.copy-button_1');
+
+            if (copyButton.innerText.toLowerCase() === 'copy') {
+                copyButton.innerText = 'Copied!';
+
+                setTimeout(() => {
+                    copyButton.innerText = 'Copy';
+                }, 500);
+            }
+        }
+
         animation();
     </script>
 </body>
