--- a/Angular.html
+++ b/Angular.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tailwind</title>
+    <title>Angular</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
@@ -58,13 +58,13 @@
                         <summary>Technologies</summary>
                         <ul class="p-2">
                             <li><a href="svelte.html">Svelte</a></li>
-                            <li><a href="#">Tailwind</a></li>
+                            <li><a href="tailwind.html">Tailwind</a></li>
                             <li><a href="python.html">Python</a></li>
                             <li><a href="javascript.html">JavaScript</a></li>
                             <li><a href="postgreSQL.html">PostgreSQL</a></li>
                             <li><a href="mongoDB.html">MongoDB</a></li>
                             <li><a href="Scala.html">Scala</a></li>
-                            <li><a href="Php.html">php</a></li>
+                            <li><a>php</a></li>
                             <li><a href="Angular.html">Angular</a></li>
                         </ul>
                     </details>
@@ -95,66 +95,32 @@
     </nav>
 
     <div class="flex flex-col justify-center items-center mt-10">
-        <img src="asset/tailwind 2.png" class="pic rounded-lg" alt="" width="1000" height="1000">
+        <img src="asset/angu.png" class="pic rounded-lg" alt="" width="750" height="750">
     </div>
     <div class="m-7">
-        <h1 class="text-3xl text-info">CSS คืออะไร ?</h1>
+        <h1 class="text-3xl text-error">Angular คืออะไร ?</h1>
         <div class="m-4">
-            <p class="text-xl">CSS (Castcading Style Sheet) คือ ภาษาที่ใช้ในการตกแต่งหน้าเว็บของเราให้มีสีสัน สวยงามขึ้น
+            <p class="text-xl">Angular
+                เป็นเฟรมเวิร์กการออกแบบแอปพลิเคชันและแพลตฟอร์มการพัฒนาสําหรับการสร้างแอปหน้าเดียวที่มีประสิทธิภาพและซับซ้อน
             </p>
-        </div>
-        <h1 class="text-3xl text-info">CSS Framework คืออะไร ?</h1>
+        </div><h1 class="text-3xl text-error">ข้อดี-เสีย Angular</h1>
         <div class="m-4">
-            <p class="text-xl">CSS Framework คือ ชุดคำสั่ง CSS ที่ถูกเขียนไว้ล่วงหน้าแล้ว เราสามารถเรียกใช้งานได้เลย
-                ตัวอย่าง
-                CSS Framework ที่ได้รับความนิยม เช่น Bootstrap, Tailwind, Semantic UI เป็นต้น
-            </p>
-        </div>
-        <h1 class="text-3xl text-info">Tailwind CSS ทำอะไรได้บ้าง ?</h1>
-        <div class="m-4">
-            <p class="text-xl">คราวนี้ลองมาดูประโยชน์ของการใช้งาน Tailwind CSS กันบ้าง ซึ่งข้อดีของ TailwindCSS มีดังนี
-            </p>
-
+            <p class="text-xl">ข้อดี</p>
             <ul class="list-disc pl-5 mt-2">
-                <li class="mb-2"> Tailwind CSS จะ Build CSS ออกมาเท่าที่ใช้งานเพราะเราจะทำการ render style.css ออกมา
-                    ไม่ได้เอาไฟล์ CSS ทั้งหมดมาใช้ </li>
-                <li class="mb-2"> สามารถเลือก Modules เข้ามาใช้งานได้ ไม่จำเป็นต้องเลือกทุก Modules </li>
-                <li class="mb-2"> สามารถปรับแต่ง Theme ของเราได้ตามอัธยาศัย </li>
-                <li class="mb-2"> สามารถจัดการกับ display ใหม่ๆอย่าง flex และ grid ได้ง่ายขึ้น </li>
-                <li class="mb-2"> สามารถสร้าง components ขึ้นมาใช้งานได้เลยเหมาะกับ Modern framework อย่าง React,
-                    Angular และ VueJS </li>
-                <li class="mb-2"> สามารถ Custom breakpoint สำหรับการทำ Responsive Web ได้ </li>
-                <li class="mb-2"> สามารถสร้าง dark mode ขึ้นมาให้ user เลือกสลับ mode ไปมาได้ </li>
+                <li class="mb-2">เป็นเฟรมเวิร์กสำหรับพัฒนาเว็บแอปพลิเคชัน ที่มีประสิทธิภาพสูง รองรับกับงานทุกขนาดในส่วนของ Front End</li>
+                <li class="mb-2">พัฒนาด้วย TypeScript ซึ่งเป็นภาษาที่มีคุณสมบัติที่เหมาะสมกว่า JavaScript ในบางแง่มุม</li>
+                <li class="mb-2">มีไลบรารี และฟังก์ชันมากมาย สำหรับพัฒนาเว็บแอปพลิเคชันครบ และมีประสิทธิภาพสูง</li>
             </ul>
-
-            <p>จะเห็นว่า Tailwind CSS นั้นมีความสามารถที่ช่วยแก้ปัญหาของ CSS Framework รู่นก่อนหน้า
-                และยังเหมาะกับการทำงานกับ Front-end Framework ยุคใหม่อย่าง React, Angular และ VueJS
-            </p>
+            <p class="text-xl">ข้อเสีย</p>
+            <ul class="list-disc pl-5 mt-2">
+                <li class="mb-2">ถ้าเทียบกับเฟรมเวิร์กในกลุ่มเดียวกัน Angular มีความซับซ้อน ซึ่งอาจต้องใช้เวลาในการเรียนรู้</li>
+                <li class="mb-2">เฟรมเวิร์กอาจมีขนาดใหญ่ เมื่อเปรียบเทียบกับเฟรมเวิร์กในกลุ่มเดียวกัน</li>
+                <li class="mb-2"> อาจไม่เหมาะกับนักพัฒนาเริ่มต้น หรือโครงการขนาดเล็ก เนื่องจากเฟรมเวิร์กมีความซับซ้อน</li>
+            </ul>
         </div>
-        <h1 class="text-3xl text-info">Tailwind CSS ทำงานยังไง</h1>
-        <div class="m-4">
-            <div class="flex flex-col justify-center items-center m-10">
-                <img src="asset/how_tailwind_work.png" class="pic rounded-lg" alt="" width="500" height="500">
-            </div>
-            <p class="text-xl">หลักการทำงานของ Tailwind CSS คือ จะมี scanner เข้าไปค้นหา TailwindCSS class ใน html,
-                Javascript หรือ file อื่นๆที่เรากำหนดไว้ใน tailwind.config.js หลังจากนั้น render output ออกมาเป็น
-                CSS(styles.css) และถ้าเราต้องการ custom stylesheet หรือสร้าง components ขึ้นมาใหม่เราจะเข้าไปเขียนใน
-                style.src.css
-            </p>
+        <div class="flex flex-col justify-center items-center mt-10">
+            <img src="asset/angular.gif" class="pic rounded-lg" alt="" style="width: 50%;">
         </div>
-        <h1 class="text-3xl text-info">Get started with Tailwind CSS</h1>
-        <div class="m-4">
-            <p class="text-xl">Tailwind CSS works by scanning all of your HTML files, JavaScript components, and any
-                other templates for class names, generating the corresponding styles and then writing them to a static
-                CSS file.
-
-                It's fast, flexible, and reliable — with zero-runtime.
-            </p>
-            <div class="flex flex-col justify-center items-center mt-10">
-               <iframe src="https://play.tailwindcss.com/biizQXffiJ" width="100%" height="600" frameborder="0"></iframe>
-            </div>
-        </div>
-      
     </div>
 
     <footer class="footer items-center p-4 bg-neutral text-neutral-content">
@@ -176,6 +142,7 @@
                 </svg></path></a>
         </nav>
     </footer>
+
     <script>
         function toggleTheme() {
             const htmlElement = document.querySelector('html');
@@ -191,14 +158,16 @@
         function animation() {
             ScrollReveal().reveal('.headline', { delay: 850 });
             ScrollReveal().reveal('.test_1', { delay: 250 });
+            ScrollReveal().reveal('.test_2', { delay: 250 });
             gsap.from(".pic", {
                 opacity: 0,
                 y: 100,
                 duration: 2
             });
-            
         }
+
         animation();
+
     </script>
 </body>
 
