--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </svg>
                 </div>
             </div>
-            <a class="btn btn-ghost text-xl" href="">Project</a>
+            <a class="btn btn-ghost text-xl" href="#">Project</a>
         </div>
         <div class="navbar-center hidden lg:flex">
             <ul class="menu menu-horizontal px-1">
@@ -53,6 +53,9 @@
                             <li><a href="javascript.html">JavaScript</a></li>
                             <li><a href="postgreSQL.html">PostgreSQL</a></li>
                             <li><a href="mongoDB.html">MongoDB</a></li>
+                            <li><a href="Scala.html">Scala</a></li>
+                            <li><a href="Php.html">php</a></li>
+                            <li><a href="Angular.html">Angular</a></li>
                         </ul>
                     </details>
                 </li>
@@ -78,7 +81,7 @@
     <!--PIC-->
     <div class="flex flex-col justify-center items-center mt-10">
         <h1 class="mb-5 text-3xl text-success for_head">โครงงานส่วนบุคคล FUNDAMENTAL WEB PROGRAMMING</h1>
-        <img src="asset/WEB TECH.gif" alt="" class="rounded-lg pic">
+        <img src="asset/WEB TECH.gif" alt="" class="rounded-lg pic" style="width: 50%;">
     </div>
 
     <div class="flex flex-col justify-center items-center mt-10">
@@ -153,17 +156,53 @@
                 </div>
             </div>
         </div>
-</div>
+        <div class="card lg:card-side bg-neutral-content shadow-xl mb-5 text-black">
+            <figure><img class="p-5" src="asset/Scala_logo.png" alt="Album" />
+            </figure>
+            <div class="card-body">
+                <h2 class="card-title">Scala</h2>
+                <p> A programming language that scales with you: from small scripts to large multiplatform applications.
+                </p>
+                <div class="card-actions justify-end">
+                    <button class="btn btn-success rounded-lg"><a href="Scala.html">Click</a></button>
+                </div>
+            </div>
+        </div>
+        <div class="card lg:card-side bg-neutral-content shadow-xl mb-5 text-black">
+            <figure><img class="p-5" src="asset/PHP_logo.png" alt="Album" />
+            </figure>
+            <div class="card-body">
+                <h2 class="card-title">php</h2>
+                <p> A scripting language that is especially suited to web development.
+                </p>
+                <div class="card-actions justify-end">
+                    <button class="btn btn-success rounded-lg"><a href="Php.html">Click</a></button>
+                </div>
+            </div>
+        </div>
+        <div class="card lg:card-side bg-neutral-content shadow-xl mb-5 text-black">
+            <figure><img class="p-5" src="asset/angular.png" alt="Album" style="width: 70%;" />
+            </figure>
+            <div class="card-body">
+                <h2 class="card-title">Angular</h2>
+                <p>Deliver web apps
+                    with confidence</p>
+                <div class="card-actions justify-end">
+                    <button class="btn btn-success rounded-lg"><a href="Angular.html">Click</a></button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <footer class="footer items-center p-4 bg-neutral text-neutral-content">
         <aside class="items-center grid-flow-col">
-            <svg width="36" height="36" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd"
+            <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd"
                 clip-rule="evenodd" class="fill-current">
                 <path
                     d="M22.672 15.226l-2.432.811.841 2.515c.33 1.019-.209 2.127-1.23 2.456-1.15.325-2.148-.321-2.463-1.226l-.84-2.518-5.013 1.677.84 2.517c.391 1.203-.434 2.542-1.831 2.542-.88 0-1.601-.564-1.86-1.314l-.842-2.516-2.431.809c-1.135.328-2.145-.317-2.463-1.229-.329-1.018.211-2.127 1.231-2.456l2.432-.809-1.621-4.823-2.432.808c-1.355.384-2.558-.59-2.558-1.839 0-.817.509-1.582 1.327-1.846l2.433-.809-.842-2.515c-.33-1.02.211-2.129 1.232-2.458 1.02-.329 2.13.209 2.461 1.229l.842 2.515 5.011-1.677-.839-2.517c-.403-1.238.484-2.553 1.843-2.553.819 0 1.585.509 1.85 1.326l.841 2.517 2.431-.81c1.02-.33 2.131.211 2.461 1.229.332 1.018-.21 2.126-1.23 2.456l-2.433.809 1.622 4.823 2.433-.809c1.242-.401 2.557.484 2.557 1.838 0 .819-.51 1.583-1.328 1.847m-8.992-6.428l-5.01 1.675 1.619 4.828 5.011-1.674-1.62-4.829z">
                 </path>
             </svg>
-            <p>Copyright © 2024 - All right reserved</p>
+            <p>Vipat-Choknantawong</p>
         </aside>
         <nav class="grid-flow-col gap-4 md:place-self-center md:justify-self-end">
             <a href="https://github.com/Earth123456789/WEB_PERSONAL" target="_blank" rel="noopener"><svg
@@ -174,6 +213,7 @@
                 </svg></path></a>
         </nav>
     </footer>
+
     <script>
         function toggleTheme() {
             const htmlElement = document.querySelector('html');
